--- a/BOTN_Week1.ipynb
+++ b/BOTN_Week1.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "### Introduction/Business Problem\n",
     "\n",
-    "The professional sports industry is one of the largest and most profitable industries in the United States. Basketball is also one of the most accessible sports to play. With that being said, the NBA is the second most popular major sports league in the U.S and Canada watched on TV (https://en.wikipedia.org/wiki/Major_professional_sports_leagues_in_the_United_States_and_Canada). Yet it fails to bring in as much revenue as the MLB which has lower TV ratings.\n",
+    "The professional sports industry is one of the largest and most profitable industries in the United States. Basketball is also one of the most accessible sports to play. With that being said, the NBA is the second most popular major sports league in the U.S and Canada watched on TV \n",
+    "(https://en.wikipedia.org/wiki/Major_professional_sports_leagues_in_the_United_States_and_Canada). Yet it fails to bring in as much revenue as the MLB which has lower TV ratings.\n",
     "\n",
     "Clearly the NBA is missing out on money. One reason for this is because the NBA is not capitalizing on all the available revenue that they could be making. This project is aimed to find a new location for the next NBA team to bring into the league."
    ]
@@ -19,7 +20,8 @@
    "source": [
     "### Data\n",
     "\n",
-    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. In order to do this I will use a list of cities with professional sports (https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises) and look at cities that do not have an NBA team.\n",
+    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. In order to do this I will use a list of cities with professional sports \n",
+    "(https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises) and look at cities that do not have an NBA team.\n",
     "\n",
     "Secondly we should look at cities that do not have an NBA team, but do have high incomes, as those people will be more likely to buy box seating and season tickets (https://www.usatoday.com/story/money/economy/2018/05/17/25-richest-cities-in-america/34991163/).\n",
     "\n",
