--- a/BOTN_Week1.ipynb
+++ b/BOTN_Week1.ipynb
@@ -22,8 +22,7 @@
    "source": [
     "### Data\n",
     "\n",
-    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. In order to do this I will use a list of cities with professional sports and look at cities that do not have an NBA team.\n",
-    "(https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises). \n",
+    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. In order to do this I will use a list of cities with professional sports and look at cities that do not have an NBA team.(https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises). \n",
     "\n",
     "Secondly we should look at cities that do not have an NBA team, but do have high incomes, as those people will be more likely to buy box seating and season tickets (https://www.usatoday.com/story/money/economy/2018/05/17/25-richest-cities-in-america/34991163/).\n",
     "\n",
