--- a/BOTN_Week1.ipynb
+++ b/BOTN_Week1.ipynb
@@ -22,12 +22,12 @@
    "source": [
     "### Data\n",
     "\n",
-    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. I will look at which cities have the most sports teams that don't have an NBA team.\n",
-    "(https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises)\n",
+    "To start deciding where to locate the new team we first need to identify which cities already have loyal fans and already have successful sports teams in that area. I will look at which cities have the most sports teams that don't already have an NBA team. [Sport Teams](https://en.wikipedia.org/wiki/List_of_American_and_Canadian_cities_by_number_of_major_professional_sports_franchises)\n",
     "\n",
-    "Secondly we should look at cities that do not have an NBA team, but do have high incomes, as those people will be more likely to buy box seating and season tickets (https://www.usatoday.com/story/money/economy/2018/05/17/25-richest-cities-in-america/34991163/).\n",
     "\n",
-    "Finally we will use the Foursquare API to look at location data of the current nba teams to make sure the new team does not take away fans from a current NBA team (https://en.wikipedia.org/wiki/National_Basketball_Association#Teams)(https://foursquare.com/)."
+    "Secondly we should look at cities that do not have an NBA team, but do have high incomes, as those people will be more likely to buy box seating and season tickets. [Rankings](https://www.usatoday.com/story/money/economy/2018/05/17/25-richest-cities-in-america/34991163/).\n",
+    "\n",
+    "Finally we will use the Foursquare API to look at location data of the current nba teams to make sure the new team does not take away fans from a current NBA team. [NBA Teams](https://en.wikipedia.org/wiki/National_Basketball_Association#Teams)  [Foursquare](https://foursquare.com/)."
    ]
   },
   {
